# fluxtuner

./: .dockerignore  .gitignore  01_readme_reformat.sh  02_tui_country_filter_fix.sh  03_gui_stable_playback_bar.sh  04_gui_ux_v1.sh  CHANGELOG.md  CONTRIBUTING.md  Containerfile  LICENSE  LICENSE-WEB  MANIFEST.in  Makefile  README.md  README.md.bak  RELEASE_NOTES_v0.2.0.md  SECURITY.md  SMOKE_TEST.md  TRADEMARKS.md  compose.yaml  fluxtuner_gui_side_panel_details_exact.sh  fluxtuner_player_adapter_refactor.sh  patch  patch_gtk_dynamic_mute_icon  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  flatpak.yml  release.yml
docs/: ENGINEERING-PROCESS.md  architecture.md  container.md  development.md  gtk-orchestration-audit.md  licensing.md  multiuser.md  refactor-roadmap.md  release.md  secure-web-deployment.md  tui-metadata-lifecycle-audit.md  tui-orchestration-audit.md  tui-view-state-audit.md  usage.md  web-metadata-security.md  web.md
flatpak/: README.md  io.github.pitill0.Fluxtuner.TUI.desktop  io.github.pitill0.Fluxtuner.desktop  io.github.pitill0.Fluxtuner.metainfo.xml  io.github.pitill0.Fluxtuner.yml  python3-requirements.json  requirements.txt
flatpak/docs/validation/: permission-device-dri.md  permission-share-ipc.md  v0.2.6.md  v0.2.7.md  v0.2.8.md  v0.2.9.md
fluxtuner/: __init__.py  __main__.py  config.py  logging_config.py  paths.py  theme_runtime.py  themes.py  tui.py  tui_details.py  tui_metadata.py  tui_playback.py  tui_table.py  tui_themes.py
fluxtuner/core/: api.py  cache.py  compatibility.py  data_usage.py  db.py  favorites.py  history.py  importers.py  manual_playlists.py  password_changes.py  player.py  playlists.py  profiles.py  public_stats.py  search_service.py  stations.py  storage.py  stream_metadata.py  users.py
fluxtuner/gui/: app.py  gtk_metadata.py  gtk_playback.py  gtk_search.py  gtk_view_state.py  style.css  window.py
fluxtuner/players/: __init__.py  base.py  capabilities.py  ffplay.py  mpg123.py  mpv.py  ogg123.py  security.py
fluxtuner/themes/: amber.tcss  default.tcss  dracula.tcss  fluxtuner.tcss  nord.tcss  ptmtrx.tcss
fluxtuner/web/: admin_actions.py  admin_cli.py  admin_users.py  app.py  auth.py  context.py  dashboard.py  guards.py  library.py  password_change_actions.py  password_changes.py  payloads.py  registration_actions.py  security.py  setup.py  validation.py
fluxtuner/web/metadata/: __init__.py  client.py  contracts.py  coordinator.py  network_policy.py  transport.py  urls.py
fluxtuner/web/routes/: admin.py  auth.py  library.py  metadata.py  public.py
fluxtuner/web/static/: admin.css  app.js  auth.css  buttons.css  dashboard.css  dialogs.css  feedback.css  forms.css  panels.css  player.css  public.css  search.css  shell.css  site.webmanifest  station-actions.css  stations.css  styles.css
fluxtuner/web/static/js/: account-requests.js  admin.js  api.js  app-bootstrap.js  app-elements.js  app-events.js  app-state.js  auth.js  dashboard.js  favorites.js  health.js  library-views.js  media-session.js  metadata.js  navigation.js  player-debug.js  player-runtime.js  player.js  playlist-renderer.js  playlists.js  public-stats.js  search.js  session-ui.js  setup.js  station-renderer.js  stations.js  theme.js  ui-shell.js
fluxtuner/web/templates/: index.html
tests/: test_api.py  test_cache.py  test_cli_compatibility.py  test_config.py  test_data_usage.py  test_db.py  test_doctor_command.py  test_favorites.py  test_favorites_storage.py  test_gtk_orchestration.py  test_history.py  test_history_storage.py  test_importers.py  test_logging_config.py  test_main.py  test_manual_playlists.py  test_path.py  test_paths.py  test_player_capabilities.py  test_player_listing.py  test_players_base.py  test_players_ffplay.py  test_players_mpg123.py  test_players_mpv.py  test_players_ogg123.py  test_players_security.py  test_players_selection.py  test_playlists.py  test_playlists_storage.py  test_profiles.py  test_profiles_storage.py  test_search_service.py  test_station_compatibility.py  test_stations.py  test_stations_storage.py  test_storage.py  test_storage_domain_boundaries.py  test_stream_metadata.py  test_theme_runtime.py  test_themes.py  (+57 more)
