[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxtuner"
version = "0.5.0"
description = "Modern internet radio player for terminal and desktop, powered by Textual, GTK and mpv."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "FluxTuner contributors" }
]
keywords = [
    "radio",
    "internet-radio",
    "streaming",
    "terminal",
    "tui",
    "textual",
    "gtk",
    "gtk4",
    "mpv",
    "music",
    "desktop",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "MIT",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31.0,<3",
    "rich>=13.7.0,<16",
    "textual>=0.80.0,<9",
]

[project.optional-dependencies]
gui = [
    "PyGObject>=3.46,<4",
]
web = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
]
dev = [
    "build>=1.2.0,<2",
    "ruff>=0.5.0,<1",
    "pytest>=9.0.3,<10",
    "mypy>=1.14.0,<2",
]

[project.urls]
Homepage = "https://github.com/pitill0/fluxtuner"
Repository = "https://github.com/pitill0/fluxtuner"
Issues = "https://github.com/pitill0/fluxtuner/issues"
Changelog = "https://github.com/pitill0/fluxtuner/blob/main/CHANGELOG.md"

[project.scripts]
fluxtuner = "fluxtuner.__main__:main"
fluxtuner-web = "fluxtuner.web.app:main"

[tool.setuptools]
packages = [
    "fluxtuner",
    "fluxtuner.core",
    "fluxtuner.gui",
    "fluxtuner.players",
    "fluxtuner.web",
]
include-package-data = true

[tool.setuptools.package-data]
fluxtuner = [
    "themes/*.tcss",
    "gui/*.css",
    "web/templates/*.html",
    "web/static/*.css",
    "web/static/*.js",
    "web/static/*.svg",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "build-dir",
    "flatpak/build-dir",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B404", "B603"]

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "fluxtuner.core.search_service",
    "fluxtuner.core.importers",
    "fluxtuner.core.stations",
    "fluxtuner.players.security",
]
disallow_untyped_defs = true
