[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxtuner"
version = "1.0.6"
description = "Modern internet radio platform for terminal, desktop and web, powered by Textual, GTK and browser playback."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT AND LicenseRef-FluxTuner-Web-NC"
authors = [
    { name = "FluxTuner contributors" }
]
keywords = [
    "radio",
    "internet-radio",
    "streaming",
    "terminal",
    "tui",
    "textual",
    "gtk",
    "gtk4",
    "mpv",
    "music",
    "desktop",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31.0,<3",
    "rich>=13.7.0,<16",
    "textual>=0.80.0,<9",
]

[project.optional-dependencies]
gui = [
    "PyGObject>=3.46,<4",
]
web = [
    "argon2-cffi>=25.1.0,<26",
    "fastapi>=0.115,<1",
    "jinja2>=3.1,<4",
    "uvicorn[standard]>=0.30,<1",
]
dev = [
    "argon2-cffi>=25.1.0,<26",
    "build>=1.2.0,<2",
    "fastapi>=0.115,<1",
    "jinja2>=3.1,<4",
    "ruff>=0.5.0,<1",
    "pytest>=9.0.3,<10",
    "mypy>=1.14.0,<2",
    "pip-audit>=2.9.0,<3",
    "httpx>=0.27,<1",
    "httpx2>=2.0,<3",
    "uvicorn[standard]>=0.30,<1",
]

[project.urls]
Homepage = "https://github.com/pitill0/fluxtuner"
Repository = "https://github.com/pitill0/fluxtuner"
Issues = "https://github.com/pitill0/fluxtuner/issues"
Changelog = "https://github.com/pitill0/fluxtuner/blob/main/CHANGELOG.md"
Licensing = "https://github.com/pitill0/fluxtuner/blob/main/docs/licensing.md"

[project.scripts]
fluxtuner = "fluxtuner.__main__:main"
fluxtuner-web = "fluxtuner.web.app:main"

[tool.setuptools]
packages = [
    "fluxtuner",
    "fluxtuner.core",
    "fluxtuner.gui",
    "fluxtuner.players",
    "fluxtuner.themes",
    "fluxtuner.web.routes",
    "fluxtuner.web.metadata",
    "fluxtuner.web",
    "fluxtuner.web.static",
    "fluxtuner.web.templates",
]
include-package-data = true

[tool.setuptools.package-data]
fluxtuner = [
    "themes/*.tcss",
    "gui/*.css",
    "web/templates/*.html",
    "web/static/*.css",
    "web/static/*.js",
    "web/static/js/*.js",
    "web/static/*.svg",
    "web/static/*.png",
    "web/static/*.webmanifest",
    "web/static/icons/*.png",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "build-dir",
    "flatpak/build-dir",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B404", "B603"]

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true


[[tool.mypy.overrides]]
module = [
    "gi",
    "gi.repository",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "fluxtuner.core.search_service",
    "fluxtuner.core.importers",
    "fluxtuner.core.stations",
    "fluxtuner.players.security",
]
disallow_untyped_defs = true
